2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>

	* ./: Removing the whole lot of deprecated components.  

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Some basic fixed to make the source actually buildable. Removing
	the marshallers from the build system for a little while. 

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac:
	* pkgconfig/hildon-widgets.pc.in: Few more fixes for the pkgconfig
	file.

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
	
	* ./: Moving pkgconfig file to pkgconfig/.

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Removing plugins and doc temporarily from the build process.
	Upgrading the autogen.sh and configure.ac.

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Removing the theme, ut and timer. 

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: hildon-widgets => src . hildon-widgets-plugins => plugins.
	Changing dir names etc. 

2006-11-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-libs.c:
	Removed gtk_widget_grab_focus on entry_validate() and added 
	control on entry_changed() for moving the focus when validate returns 
	NO_ERROR. Also it's used skip_validation for not validating 
	twice when entering a valid date in each entry.
	Fixes NB#41059 and NB#42579.

2006-11-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.8-1 release]

	* configure.ac:
	* debian/changelog: Updating.

	* hildon-widgets/hildon-scroll-area.c: Fixing a silly compilation
	breakage.

2006-10-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-scroll-area.c:
	* hildon-widgets/hildon-scroll-area.h: When using a GtkTextView inside
	the HildonScrollArea try to "compensete" the cursor position
	scrolling. Fixes NB#20219.
