@@ -44,7 +44,7 @@
 #include "hildon-composite-widget.h"
 #include <hildon-widgets/hildon-input-mode-hint.h>
 #include <hildon-widgets/hildon-defines.h>
-#include "hildon-libs-enum-types.h"
+#include "hildon-enum-types.h"
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
