@@ -1,0 +1,71 @@
+/*
+ * This file is part of hildon-libs
+ *
+ * Copyright (C) 2005, 2006 Nokia Corporation, all rights reserved.
+ *
+ * Contact: Michael Dominic Kostrzewa <michael.kostrzewa@nokia.com>
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License
+ * as published by the Free Software Foundation; version 2.1 of
+ * the License.
+ *
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA
+ *
+ */
+
+#ifndef ___HILDON_WIDGETS_H___
+#define ___HILDON_WIDGETS_H___
+
+#include "gtk-infoprint.h"
+#include "hildon-banner.h"
+#include "hildon-calendar-popup.h"
+#include "hildon-caption.h"
+#include "hildon-code-dialog.h"
+#include "hildon-color-button.h"
+#include "hildon-color-chooser-button.h"
+#include "hildon-color-chooser-dialog.h"
+#include "hildon-color-chooser.h"
+#include "hildon-color-popup.h"
+#include "hildon-color-selector.h"
+#include "hildon-composite-widget.h"
+#include "hildon-controlbar.h"
+#include "hildon-date-editor.h"
+#include "hildon-defines.h"
+#include "hildon-find-toolbar.h"
+#include "hildon-font-selection-dialog.h"
+#include "hildon-get-password-dialog.h"
+#include "hildon-hvolumebar.h"
+#include "hildon-input-mode-hint.h"
+#include "hildon-marshalers.h"
+#include "hildon-name-password-dialog.h"
+#include "hildon-note.h"
+#include "hildon-number-editor.h"
+#include "hildon-plugin-widget.h"
+#include "hildon-private.h"
+#include "hildon-program.h"
+#include "hildon-range-editor.h"
+#include "hildon-seekbar.h"
+#include "hildon-set-password-dialog.h"
+#include "hildon-sort-dialog.h"
+#include "hildon-time-editor.h"
+#include "hildon-time-picker.h"
+#include "hildon-volumebar-private.h"
+#include "hildon-volumebar-range.h"
+#include "hildon-volumebar.h"
+#include "hildon-vvolumebar.h"
+#include "hildon-weekday-picker.h"
+#include "hildon-window-private.h"
+#include "hildon-window.h"
+#include "hildon-wizard-dialog.h"
+#include "hildon-enum-types.h"
+
+#endif 
