@@ -1,3 +1,7 @@
+2006-11-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* ./: Making the source buildable again, fixing the mkenums thingy.
+
 2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>
 
 	* ./: Removing the whole lot of deprecated components.  
